--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -50,6 +50,9 @@ body:
         - Android 12
     validations:
       required: true
+  - type: markdown
+    attributes:
+      value: "---"
   - type: textarea
     attributes:
       label: Screenshots / Screenrecordings
