--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -4,6 +4,9 @@ labels:
   - bug
 
 body:
+  - type: markdown
+    attributes:
+      value: "## Information about the bug"
   - type: textarea
     attributes:
       label: Describe the bug
