--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -38,7 +38,8 @@ body:
   - type: dropdown
     attributes:
       label: Android version
-      description: "[Click here if you need help determining your Android version](https://support.google.com/android/answer/7680439)"
+      # need to use a HTML link here to set target in order to open the link in a new tab
+      description: '<a href="https://support.google.com/android/answer/7680439" target="_blank">Click here if you need help determining your Android version</a>'
       options:
         - Android 5.0 (Lollipop)
         - Android 5.1 (Lollipop)
