--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -10,12 +10,13 @@ body:
   - type: markdown
     attributes:
       value: |
-        Please remember: a feature should be...
-        *Simple* · Easy to configure and easy to use. As few settings & toggles as possible.
-        *Impactful* · Either appealing for many or necessary for some.
-        *Universal* · Has to work everywhere: in every country, on all phones.
-        *Independent* · Doesn’t add complexity if it’s not being used.
-        _[Click here to read the full knowledge base article about Niagara's design principles](https://help.niagaralauncher.app/article/8-niagaras-design-principles)_
+        > #### Please remember: a feature should be...
+        > **Simple** · Easy to configure and easy to use. As few settings & toggles as possible.
+        > **Impactful** · Either appealing for many or necessary for some.
+        > **Universal** · Has to work everywhere: in every country, on all phones.
+        > **Independent** · Doesn’t add complexity if it’s not being used.
+        >
+        > _[Click here to read the full knowledge base article about Niagara's design principles](https://help.niagaralauncher.app/article/8-niagaras-design-principles)_
   - type: textarea
     attributes:
       label: Describe the solution you'd like
