--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -10,7 +10,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        > #### Please remember: a feature should be...
+        > ### Please remember: a feature should be...
         > **Simple** · Easy to configure and easy to use. As few settings & toggles as possible.
         > **Impactful** · Either appealing for many or necessary for some.
         > **Universal** · Has to work everywhere: in every country, on all phones.
