--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -6,7 +6,7 @@ body:
     attributes:
       label: Is your feature request related to a problem?
       description: A clear and concise description of what the problem is.
-      placeholder: e.g I'm always frustrated when [...]
+      placeholder: e.g. I'm always frustrated when [...]
   - type: markdown
     attributes:
       value: |
