--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -10,7 +10,7 @@ body:
   - type: textarea
     attributes:
       label: Describe The Bug
-      description: A clear and concise description of what the bug is.
+      description: A clear and concise description of the bug
     validations:
       required: true
   - type: textarea
