--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,6 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>Maxr1998-bot/.github//renovate-presets/default"
+  ]
 }
