--- a/.github/workflows/mark-new-issues-as-triage.yml
+++ b/.github/workflows/mark-new-issues-as-triage.yml
@@ -15,5 +15,5 @@ jobs:
       - name: 'Auto-assign issue'
         uses: pozil/auto-assign-issue@74b9f64cc1a08f99358061073e243a4c3d7dd5c4 # tag=v1.11.0
         with:
-          assignees: Oddward
+          assignees: Amorphous404
 
