--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -69,6 +69,7 @@ body:
         - Android 11
         - Android 12
         - Android 13
+        - Android 14
     validations:
       required: true
   - type: markdown
