:sparkles: Add Android 15 option to bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -70,6 +70,7 @@ body:
         - Android 12
         - Android 13
         - Android 14
+        - Android 15
     validations:
       required: true
   - type: markdown
